--- a/resources/views/welcome/say_hello.phtml
+++ b/resources/views/welcome/say_hello.phtml
@@ -19,4 +19,7 @@ Helpers::header($data)?>
 <h1 class="hellow">Hello World 💘</h1>
 
 
-<?php Helpers::footer()?>
+<?php 
+print_r($medicamentos);
+
+Helpers::footer()?>
